Fixed some import issues and added junit5